--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "firebase": "^12.8.0",
     "framer-motion": "^12.26.2",
     "lucide-react": "^0.562.0",
-    "next": "^15.1.4",
-    "react": "19.2.3",
+    "next": "^16.1.3",
+    "react": "^19.2.3",
     "react-chartjs-2": "^5.3.1",
-    "react-dom": "19.2.3",
+    "react-dom": "^19.2.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
